# NoteSpace

./: .gitignore  pyproject.toml
notespace/: manage.py  package-lock.json  package.json
notespace/backend_api/: admin.py  models.py  serializer.py  urls.py  views.py
notespace/backend_api/migrations/: 0001_initial.py  0002_alter_diary_author.py  0003_note.py  0004_note_author.py  0005_note_body.py  0006_alter_note_body.py  0007_alter_note_body.py
notespace/frontend/: .gitignore  package-lock.json  package.json
notespace/frontend/public/: index.html
notespace/frontend/src/: App.js
notespace/frontend/src/buttons/: index.js  styles.css  styles.css.map  styles.scss  userButtonDelete.js  userButtonSave.js
notespace/frontend/src/cards/: CardNote.js  CardNoteNew.js  NewCardNote.js  index.js  styles.css  styles.css.map  styles.scss
notespace/frontend/src/components/: NoteComponent.js  NoteOneComponent.js  NotesAllComponent.js  styles.css  styles.css.map  styles.scss
notespace/frontend/src/context/: NotesContext.js
notespace/frontend/src/funcs/: index.js  useDeleteData.js  useFetchData.js  usePostData.js  usePutData.js
notespace/frontend/src/navbar/: navbar.js  styles.css  styles.css.map  styles.scss
notespace/frontend/src/pages/: NoteAllPage.js  NoteCreatePage.js  NoteOnePage.js  index.js  styles.css  styles.css.map  styles.scss
notespace/frontend/src/textfields/: UserTextArea.js  UserTextField.js  index.js  richTextField.js  styles.css  styles.css.map  styles.scss  textField.js
notespace/notespace/: asgi.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
