[tool.poetry]
name = "notespace"
version = "0.1.0"
description = ""
authors = ["Hermxn <hermanhrynko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.linters.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.10.0"
poetry-lock-check = "^0.1.0"
pre-commit = "^3.7.0"
django-stubs = "^5.0.0"


[tool.poetry.group.db.dependencies]
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
